--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .container {
     position: relative;
-    width: 800px;
+    width: 80%;
     height: 480px;
     background: #f5f5f5;
     box-shadow: 0 30px 50px #dbdbdb;
